--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		    <option value="">Tous</option>
 		    <option value="Action">Action</option>
 		    <option value="Aventure">Aventure</option>
-		    <option value="Comedie">Comedie</option>
+		    <option value="Comédie">Comédie</option>
 		    <option value="Crime">Crime</option>
 		    <option value="Documentaire">Documentaire</option>
 		    <option value="Drame">Drame</option>
@@ -77,7 +77,7 @@
 		    <option value="Guerre">Guerre</option>
 		    <option value="Horreur">Horreur</option>
 		    <option value="Musical">Musical</option>
-		    <option value="Mystere">Mystere</option>
+		    <option value="Mystère">Mystère</option>
 		    <option value="Romance">Romance</option>
 		    <option value="Science-Fiction">Science-Fiction</option>
 		    <option value="Suspense">Suspense</option>
